Completed the maze

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 	<canvas id="canvas" width="1200" height="1200"></canvas>
+	<button id="reset" onclick="resetMaze()">Reset Maze</button>
+	<button onclick="Astar()">Run A*</button>
 	<script src="scripts/main.js"></script>
+	<script src="scripts/Astar.js"></script>
 </body>
 </html>
