--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 <body>
 	<canvas id="canvas" width="1200" height="1200"></canvas>
 	<button id="reset" onclick="resetMaze()">Reset Maze</button>
+	<button id="reset" onclick="randomMaze()">Generate a random Maze</button>
 	<button onclick="Astar()">Run A*</button>
 	<script src="scripts/main.js"></script>
+	<script src="scripts/board.js"></script>
 	<script src="scripts/Astar.js"></script>
 </body>
 </html>
