Recusrsive backtracking is working but there is a smal bug all the paths dont touch each other

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 	<button onclick="Astar()">Run A*</button>
 	<!-- <button onclick="PrimsMazeGeneration()">Generate maze using Prims Algorithm</button> -->
 	<button onclick="DFS_MazeGenerator()">Run DFS maze generation</button>
+	<button onclick="recursiveBacktracker()">Run Recursive backtracker maze generation</button>
+
 	<button onclick="createBlackMaze()">Cover entire maze</button>
 	<br/>
 	<p>Set delay in milli seconds: <input type="number" onchange="handelSpeedChange(value)" value = delay placeholder="delay = 10ms default" /></p>
@@ -24,6 +26,7 @@
 	<script src="scripts/board.js"></script>
 	<script src="scripts/Astar.js"></script>
 	<script src="scripts/prims_maze_generation.js"></script>
+	<script src="scripts/recursive_backtracker.js"></script>
 	<script src="scripts/depthFirstSearch_MazeGenerator.js"></script>
 </body>
 </html>
