Bug fix in clear and rest maze functions

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<video></video>
 	<br />
 	<button id="reset" onclick="resetMaze()">Reset Maze</button>
+	<button id="reset" onclick="clearPath()">Clear Path</button>
 	<button id="reset" onclick="randomMaze()">Generate a random Maze</button>
 	<br/>
 	<br/>
