--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<canvas id="canvas" width="1200" height="1200"></canvas>
 	<br/>
 	<br/>
+	
+	<button><a href="https://github.com/yashodeepchikte/Path-finder" style="color:black; text-decoration: none;">GitHub Page</a></button>
 	<button onclick="Astar()">Run A*</button>
 	<button onclick="dijkstras()">Run Dikjstra</button>
 	<br/>
