--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<a href="https://github.com/yashodeepchikte/Path-finder" style="color:black; text-decoration: none;">GitHub Page</a>
 			<button onclick="Astar()" class="astar">Run A*</button>
 			<button onclick="dijkstras()">Run Dikjstra</button>
-	
+			<button onclick="DFS()">Run DFS</button>
 			<br />
 			<button onclick="recursiveBacktracker()">Run Recursive backtracker maze generation</button>
 			<button onclick="DFS_MazeGenerator()">Run DFS maze generation</button>
@@ -94,5 +94,6 @@
 	<script src="scripts/recursive_backtracker.js"></script>
 	<script src="scripts/depthFirstSearch_MazeGenerator.js"></script>
 	<script src="scripts/Dijkstra.js"></script>
+	<script src="scripts/DepthFirstSearch.js"></script>
 </body>
 </html>
