added generating random maze

--- a/index2.html
+++ b/index2.html
@@ -74,7 +74,6 @@
 			>
 		</div>
 
-
 		<div class="form-group">
 			<label for="selector" class="nav-link active pr-1">Selector</label>
 			<select class="form-control" id="selector"  onchange="handelInputsChange(value)">
@@ -84,11 +83,15 @@
 				<option>Small-Obstacle</option>
 				<option>Large-Obstacle</option>
 				<option>Empty cell</option>
-				
 			</select>
 		</div>
+	</form>
 
 
+	<form class="container">
+		<div class="form-group">
+			<button onclick="generateRandomMaze()" class="btn btn-light mt-2">Random Maze</button>.
+		</div>
 	</form>
 
 	<!-----------------------------------------------  Board  ------------------------------------------------------------->
@@ -102,7 +105,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-	<script src="./scripts2/board.js""></script>
-
+	<script src="./scripts2/board.js"></script>
+	<script src="./scripts2/maze.js"></script>
+	
 	</body>
 </html>
