Addedd Spiral maze

--- a/index2.html
+++ b/index2.html
@@ -92,6 +92,9 @@
 		<div class="form-group">
 			<button onclick="generateRandomMaze()" class="btn btn-light mt-2">Random Maze</button>.
 		</div>
+		<div class="form-group">
+			<button onclick="generateSpiralMaze()" class="btn btn-light mt-2">Spiral Maze</button>.
+		</div>
 	</form>
 
 	<!-----------------------------------------------  Board  ------------------------------------------------------------->
