--- a/index2.html
+++ b/index2.html
@@ -124,6 +124,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	<script src="./scripts2/board.js"></script>
 	<script src="./scripts2/maze.js"></script>
+	
+
+	<script src="./PriorityQueue/ArrayMin.js"></script>
+	<script src="./PriorityQueue/BinaryHeap.js"></script>
 	<script src="./scripts2/Djkstra.js"></script>
 	
 	</body>
