--- a/index2.html
+++ b/index2.html
@@ -28,7 +28,7 @@
 	<form class="container">
 			<div class="form-group">
 				<label for="algorithm" class="nav-link active pr-1">Algorithm</label>
-				<select class="form-control" id="algorithm" onchange="handelInputsChange(value)">
+				<select class="form-control" id="algorithm" onchange="handelInputsChange( value)">
 					<option>Dijkstra's algorithm</option>
 					<option>A* algorithm</option>
 					<option>Bellmon ford algorithm</option>
@@ -51,7 +51,9 @@
 			<div class="form-group">
 				<label for="heapType" class="nav-link active pr-1">Type of Priority Queue</label>
 				<select class="form-control" id="heapType"  onchange="handelInputsChange(value)">
-					<option>Binary Min heap</option>
+					<option>
+						
+					</option>
 					<option>Array</option>
 					<option>Fibonacci Heap</option>
 					<option>Binomial Heap</option>
@@ -122,13 +124,15 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+	
 	<script src="./scripts2/board.js"></script>
 	<script src="./scripts2/maze.js"></script>
 	
-
+	<script src="./PriorityQueue/Node.js"></script>
 	<script src="./PriorityQueue/ArrayMin.js"></script>
 	<script src="./PriorityQueue/BinaryHeap.js"></script>
+
 	<script src="./scripts2/Djkstra.js"></script>
-	
+		
 	</body>
 </html>
